<resources>
    <string name="app_name">Practico2_DSM</string>
    #SplashScreen
    <string name="SplashTitle">Practico2 DSM</string>
    <string name="Alumno1">Carlos Emerson Portillo Martínez</string>
    <string name="Alumno2">David Alexander Aguilar Panameño</string>
    #Ejercicio3
    <string name="labelNumber1">Ingrese el primer número</string>
    <string name="labelNumber2">Ingrese el segundo número</string>
    <string name="numberBox1">0</string>
    <string name="numberBox2">0</string>
    <string name="btnSuma">+</string>
    <string name="btnResta">-</string>
    <string name="btnMultiplicacion">*</string>
    <string name="btnDivision">/</string>
    <string name="btnLimpiar">C</string>
    <string name="btnIgual">=</string>
    <string name="resultBox">0</string>
</resources>